<resources>
    <string name="app_name">PAIN-Editor</string>
    <string name="buttonForCamera">Camera</string>
    <string name="buttonForGallery">Gallery</string>
    <string name="buttonForA">A*</string>
    <string name="buttonForEditor">Go to Editor</string>
    <string name="aStart">Mark Start</string>
    <string name="aFinish">Mark Finish</string>
    <string name="aWall">Wall</string>
    <string name="aGo">DO</string>
    <string name="todo">TODO</string>
    <string name="title_activity_filter">Filters</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="color_selection">Color selection</string>
    <string name="negative">Negative</string>
    <string name="circlar">Circlar</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="number0">0</string>
    <string name="number100">100</string>
    <string name="coefficient">Coefficient</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="imageveiw">ImageVeiw</string>
    <string name="mask_for_selection">Mask for selection</string>
    <string name="re_generate_field">Re generate field</string>
    <string name="apply_filter">Apply filter</string>
    <string name="point_1">Point 1</string>
    <string name="point_2">Point 2</string>
    <string name="point_3">Point 3</string>
    <string name="start">RUN</string>
    <string name="original_image">Original Image</string>
    <string name="radius">Radius</string>
    <string name="trash">Trash</string>
    <string name="amount">Amount</string>
    <string name="canvas">Canvas</string>
    <string name="save">Save</string>
    <string-array name="euristics">
        <item>Euclidean</item>
        <item>Manhattan</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="ways_dims">
        <item>4-Way</item>
        <item>8-Way</item>
    </string-array>
    <string-array name="filters">
        <item>Color selection</item>
        <item>Negative</item>
        <item>Circular</item>
    </string-array>
    <string name="title_activity_retouch">RetouchActivity</string>
    <string name="retouch">Retouch</string>
    <string name="title_activity_splines">SplinesActivity</string>
    <string name="degrees">Degrees</string>
    <string name="apply">Apply</string>
    <string name="generate_look_zone">Generate look zone</string>
</resources>
