<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BilinearActivity" android:background="@color/colorBackground">

    <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAccept" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline10" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textStyle="bold" android:textSize="18sp"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline10" android:textSize="18sp"
            android:textColor="@color/colorBackground1" android:background="@color/colorAccent"/>
    <Button
            android:text="@string/point_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPoint1" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/point_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPoint2" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDo" app:layout_constraintStart_toEndOf="@+id/buttonPoint1"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/buttonPoint3"
            android:layout_marginEnd="8dp" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/point_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonPoint3"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDo" android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"/>
    <ImageView
            android:layout_width="300dp"
            android:layout_height="170dp" tools:src="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageOrig"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/buttonAccept"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPoint2" app:layout_constraintVertical_bias="0.0"
            android:scaleType="fitCenter"
            android:contentDescription="@string/original_image"/>
    <ImageView
            android:layout_width="300dp"
            android:layout_height="170dp" tools:src="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageCanvas"
            app:layout_constraintBottom_toTopOf="@+id/buttonPoint2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageOrig" android:layout_marginTop="24dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="24dp" android:contentDescription="@string/canvas"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="60dp" android:id="@+id/guideline10"/>
</android.support.constraint.ConstraintLayout>