<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FilterActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:src="@tools:sample/avatars"
            android:id="@+id/image_cur_view"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/Neg_button"
            android:contentDescription="@string/imageveiw"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="60dp" android:id="@+id/guideline5"/>
    <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Filt_button_accept" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Filt_button_cancel" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <Button
            android:text="@string/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Neg_button" app:layout_constraintStart_toEndOf="@+id/CS_button"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/Circlar_button"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/circlar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Circlar_button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/color_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CS_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/redView"
            app:layout_constraintBottom_toTopOf="@+id/greenView" app:autoSizeMaxTextSize="16pt"
            app:autoSizeMinTextSize="14pt" android:textSize="24sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"/>
    <TextView
            android:text="@string/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greenView"
            app:layout_constraintBottom_toTopOf="@+id/blueView" app:autoSizeMaxTextSize="16pt"
            app:autoSizeMinTextSize="14pt" android:textSize="24sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"/>
    <TextView
            android:text="@string/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blueView"
            app:layout_constraintBottom_toTopOf="@+id/CS_button" app:autoSizeMaxTextSize="16pt"
            app:autoSizeMinTextSize="14pt" android:textSize="24sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"/>
    <EditText
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_green" app:layout_constraintStart_toEndOf="@+id/greenView"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/greenView" android:textSize="24sp" android:editable="true"
            android:textIsSelectable="true" android:inputType="" android:importantForAutofill="no"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"/>
    <EditText
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_red"
            app:layout_constraintStart_toStartOf="@+id/text_green"
            android:textSize="24sp" android:editable="true"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/text_green"
            android:textIsSelectable="true" android:background="@color/colorBackground"
            android:textColor="@color/colorIcones"/>
    <EditText
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_blue"
            app:layout_constraintTop_toBottomOf="@+id/text_green" app:layout_constraintStart_toStartOf="@+id/text_red"
            android:textSize="24sp" android:editable="true" android:layout_marginTop="8dp"
            android:textIsSelectable="true" android:background="@color/colorBackground"
            android:textColor="@color/colorIcones"/>
    <TextView
            android:text="@string/mask_for_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MaskText"
            app:layout_constraintBottom_toTopOf="@+id/redView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="24dp" android:textSize="18sp"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"/>

</android.support.constraint.ConstraintLayout>