<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MaskingActivity" android:background="@color/colorBackground">

    <ImageView
            android:layout_width="319dp"
            android:layout_height="376dp" tools:src="@tools:sample/avatars[3]"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/unsharpMaskingImage" app:layout_constraintHorizontal_bias="0.542"/>
    <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_accept"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline16" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:background="@color/colorAccent" android:textSize="18sp"
            android:textStyle="bold" android:textColor="@color/colorBackground"/>

    <TextView
            android:text="@string/radius"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/redView"
            app:autoSizeMaxTextSize="16pt"
            app:autoSizeMinTextSize="14pt" android:textSize="24sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/unsharpMaskingImage"/>
    <TextView
            android:text="@string/trash"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/greenView"
            app:autoSizeMaxTextSize="16pt"
            app:autoSizeMinTextSize="14pt" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/redView"/>
    <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/blueView"
            app:autoSizeMaxTextSize="16pt"
            app:autoSizeMinTextSize="14pt" android:textSize="24sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorBackground" android:textColor="@color/colorIcones"
            android:labelFor="@id/text_blue"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/greenView"/>
    <EditText
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/radiusText"
            android:text="@string/number0" android:layout_marginStart="100dp"
            app:layout_constraintStart_toStartOf="@+id/redView"
            app:layout_constraintBottom_toBottomOf="@+id/redView"/>
    <EditText
            android:layout_width="140dp"
            android:layout_height="49dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/trashText"
            android:text="@string/number0" android:layout_marginStart="100dp"
            app:layout_constraintStart_toStartOf="@+id/greenView"
            app:layout_constraintBottom_toBottomOf="@+id/greenView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radiusText"/>
    <EditText
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/amountText"
            android:text="@string/number0" android:layout_marginStart="100dp"
            app:layout_constraintStart_toStartOf="@+id/blueView"
            app:layout_constraintBottom_toBottomOf="@+id/blueView"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doUM"
            android:background="@color/colorAccent" android:textSize="18sp" android:textStyle="bold"
            android:textColor="@color/colorBackground" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/trashText"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintBottom_toBottomOf="@+id/trashText" app:layout_constraintTop_toTopOf="@+id/trashText"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="60dp" android:id="@+id/guideline16"/>
</android.support.constraint.ConstraintLayout>