<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_rotate">

    <ImageView
            android:layout_width="308dp"
            android:layout_height="341dp" tools:src="@mipmap/ic_launcher"
            android:id="@+id/imageForRotate"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline14"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintVertical_bias="0.086" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="429dp" android:id="@+id/guideline6"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="211dp" android:id="@+id/guideline7"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"/>
    <EditText
            android:layout_width="301dp"
            android:layout_height="48dp"
            android:inputType="numberSigned|number|numberDecimal"
            android:ems="10"
            android:id="@+id/degreesBox"
            android:autofillHints="" android:text="@string/number0" android:textSize="24sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttonStart"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/angleBox"
            app:layout_constraintStart_toStartOf="@+id/degreesBox"
            android:textSize="30sp" android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/degreesBox" app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/degreesBox"/>
    <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAccept"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline14" android:background="@color/colorAccent"
            android:textSize="18sp" android:textStyle="bold" android:textColor="@color/colorBackground"/>
    <Button
            android:text="@string/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStart" app:layout_constraintEnd_toStartOf="@+id/buttonAccept"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.495"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline17"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="60dp" android:id="@+id/guideline14"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="602dp"
            android:id="@+id/guideline17"/>
</android.support.constraint.ConstraintLayout>