<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="550dp" android:id="@+id/guideline8"/>
    <ImageView
            android:layout_width="308dp"
            android:layout_height="341dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageForResize"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/coeffView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline12"/>
    <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_accept"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12" android:background="@color/colorAccent"
            android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorBackground"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12" android:background="@color/colorAccent"
            android:textColor="@color/colorBackground" android:textSize="18sp" android:textStyle="bold"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStart"
            app:layout_constraintStart_toEndOf="@+id/button_accept" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorAccent"
            android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorBackground"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/coeffText" app:layout_constraintBottom_toTopOf="@+id/buttonStart"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="Coefficient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coeffView"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/coeffText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="60dp" android:id="@+id/guideline12"/>
</android.support.constraint.ConstraintLayout>